Add separate screen for augmenter inventory